--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: fluentui_icons
 description: Microsoft Fluent UI Icons based on the official repo
 version: 0.0.1
-author: Alberto Bonacina <bonacina.alberto@gmail.com>
-homepage:
+homepage: https://github.com/polilluminato/fluentui-icons
+issue_tracker: https://github.com/polilluminato/fluentui-icons/issues
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
