--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fluentui_icons
-description: Microsoft Fluent UI Icons based on the official repo
-version: 0.0.1
+description: Microsoft Fluent UI Icons package for Flutter based on the official repo
+version: 0.1.0
 homepage: https://github.com/polilluminato/fluentui-icons
 issue_tracker: https://github.com/polilluminato/fluentui-icons/issues
 
